snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.jar.sha1
f7eec37473f67900525ffa30759def13ac390d55